feat: adds miniIO